[package]
name = "genv"
version = "0.1.0"
edition = "2021"

[features]
default = ["arc"]
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.15.0", default-features = false }
koto_parser = { path = "../parser", version = "^0.15.0", default-features = false }
koto_runtime = { path = "../runtime", version = "^0.15.0", default-features = false }

dunce = { workspace = true }
thiserror = { workspace = true }

