[package]
name = "koto_talib"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Koto library containing simple color utilities"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
palette = { workspace = true }
yata = "0.6"


[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils" }
